--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "Top")%>
-  <title><%= yield(:title) %> |AttendanceApp</title>
+ <div class="center jumbotron">
  
   <h1>勤怠管理システム</h1>
   <p>ログインはこちらから</p>
+  <%= link_to "Sign up", '#', class: "btn btn-lg btn-primary" %>
+ </div> 
