--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,13 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag 'application','data-turbolinks-track': 'reload' %>
     <%= javascript_importmap_tags %>
+    <%= render 'layouts/shim' %>
+   
   </head>
-
+gh
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+    <div class="container">
+     <%= yield %>
   </body>
 </html>
