--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -3,5 +3,5 @@
  
   <h1>勤怠管理システム</h1>
   <p>ログインはこちらから</p>
-  <%= link_to "Sign up", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary" %>
  </div> 
