--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% provide(:title, 'sign up')%>
+<h1>ユーザー登録</h1>
+<p>ユーザー新規登録ができます。</p>
