--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,6 @@ gh
     <%= render 'layouts/header' %>
     <div class="container">
      <%= yield %>
+     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
